// Copyright IBM Corp. All Rights Reserved.
//
// SPDX-License-Identifier: Apache-2.0
//

syntax = "proto3";

option go_package = "github.com/hyperledger-labs/SmartBFT/naive";

package naive;

message FwdMessage {
    uint64 sender = 1;
    bytes payload = 2;
}